--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "comics-universes",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "0.9.5"
-  },
-  "devDependencies": {
-    "alasql": "^0.4.11",
-    "chai": "^4.2.0",
-    "console.table": "^0.10.0",
-    "react-test-renderer": "^16.8.6"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "name": "comics-universes",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+      "react": "^16.8.6",
+      "react-dom": "^16.8.6",
+      "react-scripts": "0.9.5"
+    },
+    "devDependencies": {
+      "alasql": "^0.4.11",
+      "chai": "^4.2.0",
+      "console.table": "^0.10.0"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject"
+    }
   }
-}
+  
