--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "d3-array": "2.2.0",
     "d3-scale": "3.0.0",
+    "jquery": "3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "0.9.5",
+    "react-svg-pan-zoom": "3.1.0",
     "react-tooltip": "^3.10.0"
   },
   "devDependencies": {
