--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "d3-array": "2.2.0",
+    "d3-axis": "^1.0.12",
     "d3-scale": "3.0.0",
     "d3-selection": "1.4.0",
     "jquery": "3.4.1",
