--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comics-universes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://heberleh.github.io/comics-universes",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "d3-array": "2.2.0",
